# os-series

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  REVISIONS.md  jbLocalTesting.ps1  x86_64-jos.json
.cargo/: config.toml
.github/workflows/: docker-image.yml
buildenv/: Dockerfile
buildenv/files/gcc/: t-x86_64-elf
buildenv/files/src/: build-binutils.sh
buildenv/gcc/: config.gcc.patch
buildenv/src/: build-binutils.sh  build-gcc.sh
buildenv_rust/: Dockerfile
buildenv_rust/files/src/: build-gcc.sh
kernel/: Cargo.toml
kernel/asm/: gdt.asm  interrupt.asm  switch_to_ring3.asm
kernel/asm/boot/: header.asm  main.asm  main64.asm
kernel/src/: gdt.S  gdt.rs  interrupt.S  interrupt.rs  kernel.rs  keyboard.rs  kprint.rs  logging.rs  process.rs  switch_to_ring3.S  syscall.rs  time.rs  userland.rs  util.rs  vga.rs
src/: gdt.rs  interrupt.rs  kernel.rs  keyboard.rs  libc.rs  logging.rs  main.rs  print.rs  process.rs  syscall.rs  time.rs  userland.rs
src/impl/kernel/: chars.c  chars.h  keyboard.h  logging.rs  main.c  main.rs  print.c  print.rs  time.rs  types.h  utils.c  utils.h
src/impl/x86_64/: gdt.asm  idt.c  idt_.asm  interrupt.asm  keyboard.c  macros.mac  pic.c  port.c  port_.asm  print.c  ps2.c  rtc.c  switch_to_ring3.asm
src/impl/x86_64/boot/: header.asm  main.asm
src/intf/: bool.h  keyboard.h  print.h
src/intf/x86_64/: gdt.h  idt.h  pic.h  port.h  ps2.h  rtc.h
targets/x86_64/: linker.ld
targets/x86_64/iso/: .gitignore
userland/: Cargo.toml
userland/src/: PureDOOM.h  doom_interface.c  helloworld.rs  libc.rs  main.rs
(+1 files in other folders)
